Revision history for Perl extension Catalyst::Plugin::Authentication

     - Convert repository to git (fREW Schmidt)

0.10018 29 Jul 2011
     - Fix failing tests with the new PSGI Catalyst dev release

0.10017 24 Jan 2010
     - Fix failing tests with the new PSGI Catalyst dev release

0.10016 22 Jan 2010
     - Move root actions out of applcation class in tests to remove
       warnings in the latest Catalyst.
     - Add AUTOLOAD method to the default user class so that methods are
       delegated down onto the underlieing user object retrieved from
       the store (if present)
     - Fix typos in documentation (RT#49476)
     - Fix compatibilty with Catalyst 5.70 (RT#50466)
     - Various documentation improvements
     - Fix Realm::Processive's authinfo_munge option (RT#47106)

0.10015 Tue Sep 1 01:40:36 BST 2009

     - Remove (undeclared) dependency on Class::Data::Inhertiable (RT#49086)
     - Remove dependency on Test::MockObject
     - Fix repository metadata in META.yml / Makefile.PL
     - Make POD tests author side only.

0.10014 Tue Aug 25 15:42:57 BST 2009

      - Don't always supply an "id" column in the authinfo passed to the store
        class in ::Credential::Remote. This means that it works better with
        the DBIC store. (t0m)

      - Make auth_realms method ensure authentication is initialized
        before calling methods which get created during auth initialization.
        Fixes back compat cases where auth store is in the plugin list
        before the authentication plugin. (t0m)

0.10013 Fri Jun 19 16:08:00 BST 2009
      - Add a username_field config item to ::Credential::Remote
        (Nigel Metheringham)
      - Die with a useful error message if we are about to try to restore
        a user from a realm which does not exist. (t0m)

0.10012 Sat Jun  6 10:58:43 BST 2009
      - Add Catalyst::Authentication::Credential::Remote which authenticates you
        directly from environment variables passed by your web server. This